# wiresum

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: claude-builder-respond.yml  claude-builder.yml  claude-merge.yml  claude-reviewer.yml
evals/: config.json  golden.jsonl  runner.py
wiresum/: __init__.py  classifier.py  cli.py  config.py  db.py  feedbin.py  server.py
wiresum/prompts/: classification.j2
